cropper serialization bug fixed, message preview (reply message UI) fixed and version updated

--- a/src/app/components/MessagePreview/style.scss
+++ b/src/app/components/MessagePreview/style.scss
@@ -72,13 +72,13 @@
         .preview-message-body {
           text-align: left;
           width: 100%;
-          padding: 1px 0 0;
+          padding: 0;
           font-size: 13px;
           font-weight: 100;
 
           > .inner {
-            line-height: 1.2em;
-            height: 15px;
+            line-height: 1.3em;
+            height: 16px;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
